Configure new resources endpoint
