# api/kessel/inventory/v1beta1/resources/resource_data.pb.go
@@ -1,0 +1,155 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        (unknown)
+// source: kessel/inventory/v1beta1/resources/resource_data.proto
+
+package resources
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type ResourceData struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	ResourceData string `protobuf:"bytes,395858490,opt,name=resource_data,proto3" json:"resource_data,omitempty"`
+}
+
+func (x *ResourceData) Reset() {
+	*x = ResourceData{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_kessel_inventory_v1beta1_resources_resource_data_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ResourceData) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResourceData) ProtoMessage() {}
+
+func (x *ResourceData) ProtoReflect() protoreflect.Message {
+	mi := &file_kessel_inventory_v1beta1_resources_resource_data_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResourceData.ProtoReflect.Descriptor instead.
+func (*ResourceData) Descriptor() ([]byte, []int) {
+	return file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *ResourceData) GetResourceData() string {
+	if x != nil {
+		return x.ResourceData
+	}
+	return ""
+}
+
+var File_kessel_inventory_v1beta1_resources_resource_data_proto protoreflect.FileDescriptor
+
+var file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDesc = []byte{
+	0x0a, 0x36, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f,
+	0x72, 0x79, 0x2f, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x31, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75,
+	0x72, 0x63, 0x65, 0x73, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x5f, 0x64, 0x61,
+	0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x22, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c,
+	0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31, 0x62, 0x65, 0x74,
+	0x61, 0x31, 0x2e, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x22, 0x38, 0x0a, 0x0c,
+	0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x44, 0x61, 0x74, 0x61, 0x12, 0x28, 0x0a, 0x0d,
+	0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x5f, 0x64, 0x61, 0x74, 0x61, 0x18, 0xba, 0xa4,
+	0xe1, 0xbc, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
+	0x65, 0x5f, 0x64, 0x61, 0x74, 0x61, 0x42, 0x86, 0x01, 0x0a, 0x32, 0x6f, 0x72, 0x67, 0x2e, 0x70,
+	0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x5f, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31, 0x62, 0x65,
+	0x74, 0x61, 0x31, 0x2e, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x50, 0x01, 0x5a,
+	0x4e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x72, 0x6f, 0x6a,
+	0x65, 0x63, 0x74, 0x2d, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e,
+	0x74, 0x6f, 0x72, 0x79, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6b, 0x65, 0x73,
+	0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2f, 0x76, 0x31,
+	0x62, 0x65, 0x74, 0x61, 0x31, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescOnce sync.Once
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescData = file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDesc
+)
+
+func file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescGZIP() []byte {
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescOnce.Do(func() {
+		file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescData = protoimpl.X.CompressGZIP(file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescData)
+	})
+	return file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDescData
+}
+
+var file_kessel_inventory_v1beta1_resources_resource_data_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_kessel_inventory_v1beta1_resources_resource_data_proto_goTypes = []any{
+	(*ResourceData)(nil), // 0: kessel.inventory.v1beta1.resources.ResourceData
+}
+var file_kessel_inventory_v1beta1_resources_resource_data_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_kessel_inventory_v1beta1_resources_resource_data_proto_init() }
+func file_kessel_inventory_v1beta1_resources_resource_data_proto_init() {
+	if File_kessel_inventory_v1beta1_resources_resource_data_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_kessel_inventory_v1beta1_resources_resource_data_proto_msgTypes[0].Exporter = func(v any, i int) any {
+			switch v := v.(*ResourceData); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_kessel_inventory_v1beta1_resources_resource_data_proto_goTypes,
+		DependencyIndexes: file_kessel_inventory_v1beta1_resources_resource_data_proto_depIdxs,
+		MessageInfos:      file_kessel_inventory_v1beta1_resources_resource_data_proto_msgTypes,
+	}.Build()
+	File_kessel_inventory_v1beta1_resources_resource_data_proto = out.File
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_rawDesc = nil
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_goTypes = nil
+	file_kessel_inventory_v1beta1_resources_resource_data_proto_depIdxs = nil
+}
