# openapi.yaml
@@ -392,6 +392,109 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/google.rpc.Status'
+    /api/inventory/v1beta1/resources/{resourceType}:
+        put:
+            tags:
+                - KesselResourceService
+            operationId: KesselResourceService_UpdateResource
+            parameters:
+                - name: resourceType
+                  in: path
+                  required: true
+                  schema:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.UpdateResourceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.UpdateResourceResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+        post:
+            tags:
+                - KesselResourceService
+            operationId: KesselResourceService_CreateResource
+            parameters:
+                - name: resourceType
+                  in: path
+                  required: true
+                  schema:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.CreateResourceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.CreateResourceResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+        delete:
+            tags:
+                - KesselResourceService
+            operationId: KesselResourceService_DeleteResource
+            parameters:
+                - name: resourceType
+                  in: path
+                  required: true
+                  schema:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.DeleteResourceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.DeleteResourceResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
 components:
     schemas:
         google.protobuf.Any:
@@ -595,6 +698,21 @@ components:
         kessel.inventory.v1beta1.resources.CreateNotificationsIntegrationResponse:
             type: object
             properties: {}
+        kessel.inventory.v1beta1.resources.CreateResourceRequest:
+            type: object
+            properties:
+                resourceType:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+                resource:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.Resource'
+        kessel.inventory.v1beta1.resources.CreateResourceResponse:
+            type: object
+            properties: {}
         kessel.inventory.v1beta1.resources.CreateRhelHostRequest:
             type: object
             properties:
@@ -633,6 +751,21 @@ components:
                         - $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.ReporterData'
                     description: "The resource to be deleted will be defined by \n \\\"<reporter_data.reporter_type>:<reporter_instaance_id>:<reporter_data.local_resource_id>\\\"\n from the request body."
         kessel.inventory.v1beta1.resources.DeleteNotificationsIntegrationResponse:
+            type: object
+            properties: {}
+        kessel.inventory.v1beta1.resources.DeleteResourceRequest:
+            type: object
+            properties:
+                resourceType:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+                resource:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.Resource'
+        kessel.inventory.v1beta1.resources.DeleteResourceResponse:
             type: object
             properties: {}
         kessel.inventory.v1beta1.resources.DeleteRhelHostRequest:
@@ -858,6 +991,20 @@ components:
                 reporter_version:
                     type: string
                     description: version of the reporter
+        kessel.inventory.v1beta1.resources.Resource:
+            type: object
+            properties:
+                metadata:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.Metadata'
+                reporterData:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.ReporterData'
+                resourceData:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.ResourceData'
+        kessel.inventory.v1beta1.resources.ResourceData:
+            type: object
+            properties:
+                resource_data:
+                    type: string
         kessel.inventory.v1beta1.resources.ResourceLabel:
             type: object
             properties:
@@ -907,6 +1054,21 @@ components:
         kessel.inventory.v1beta1.resources.UpdateNotificationsIntegrationResponse:
             type: object
             properties: {}
+        kessel.inventory.v1beta1.resources.UpdateResourceRequest:
+            type: object
+            properties:
+                resourceType:
+                    enum:
+                        - RESOURCE_TYPE_UNSPECIFIED
+                        - K8S_CLUSTER
+                        - RHEL_HOST
+                    type: string
+                    format: enum
+                resource:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta1.resources.Resource'
+        kessel.inventory.v1beta1.resources.UpdateResourceResponse:
+            type: object
+            properties: {}
         kessel.inventory.v1beta1.resources.UpdateRhelHostRequest:
             type: object
             properties:
@@ -923,4 +1085,5 @@ tags:
     - name: KesselK8SPolicyIsPropagatedToK8SClusterService
     - name: KesselK8SPolicyService
     - name: KesselNotificationsIntegrationService
+    - name: KesselResourceService
     - name: KesselRhelHostService
